[package]
name = "hdwallet"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-crystals-dilithium = { workspace = true, default-features = false }
hdwallet = { git = "https://gitlab.com/resonance-network/rusty-crystals.git", package = "hdwallet", default-features = false, features = ["no_std"] }

[features]
default = ["std"]
std = [
    # Note: We don't include rusty-crystals-dilithium/std here since it doesn't have that feature
]
