[package]
authors.workspace = true
description = "FRAME signed extension for verifying the metadata hash"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-metadata-hash-extension"
repository.workspace = true
version = "0.13.0"

# Vendored upstream FRAME crate.

[dependencies]
array-bytes = { workspace = true, default-features = true }
codec = { features = ["derive"], workspace = true }
const-hex.workspace = true
docify.workspace = true
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info = { features = ["derive", "serde"], workspace = true }
sp-runtime = { features = ["serde"], workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"const-hex/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-runtime/std",
]
