[package]
authors.workspace = true
description = "Use to derive parsing for parsing struct."
edition.workspace = true
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "frame-support-procedural-tools-derive"
repository.workspace = true
version = "12.0.0"

# Vendored upstream FRAME crate: proc macros expand to code that uses
# expect/unwrap, so we deliberately don't apply the workspace restriction lints.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = { version = "1.0.37", features = ["proc-macro"] }
syn = { version = "2.0.87", features = ["extra-traits", "full", "parsing", "proc-macro"] }
