[package]
authors.workspace = true
description = "Proc macro helpers for procedural macros"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-support-procedural-tools"
repository.workspace = true
version = "13.0.1"

# Vendored upstream FRAME crate: proc macros expand to code that uses
# expect/unwrap, so we deliberately don't apply the workspace restriction lints.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support-procedural-tools-derive = { workspace = true, default-features = true }
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["extra-traits", "full", "visit"] }
