[package]
authors.workspace = true
description = "Support code for the runtime."
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-support"
readme = "README.md"
repository.workspace = true
version = "45.1.0"

# Vendored upstream FRAME crate: the pallet macros expand to expect/unwrap, so
# we deliberately don't apply the workspace restriction lints here.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
aquamarine.workspace = true
array-bytes.workspace = true
binary-merkle-tree.workspace = true
bitflags = { workspace = true }
codec = { features = ["derive", "max-encoded-len"], workspace = true }
docify.workspace = true
environmental.workspace = true
frame-metadata = { features = ["current", "unstable"], workspace = true }
frame-support-procedural.workspace = true
impl-trait-for-tuples.workspace = true
k256 = { features = ["ecdsa"], workspace = true }
log.workspace = true
macro_magic.workspace = true
paste = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["alloc", "derive"], workspace = true }
serde_json = { features = ["alloc"], workspace = true }
sp-api = { features = ["frame-metadata"], workspace = true }
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-crypto-hashing-proc-macro = { workspace = true, default-features = true }
sp-debug-derive.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-metadata-ir.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-staking.workspace = true
sp-state-machine = { optional = true, workspace = true }
sp-std.workspace = true
sp-tracing.workspace = true
sp-trie.workspace = true
sp-weights.workspace = true
tt-call.workspace = true

[dev-dependencies]
Inflector.workspace = true
frame-system = { workspace = true, default-features = true }
pretty_assertions.workspace = true

[features]
default = ["std"]
experimental = ["frame-support-procedural/experimental"]
full-metadata-docs = ["scale-info/docs"]
no-metadata-docs = [
	"frame-support-procedural/no-metadata-docs",
	"sp-api/no-metadata-docs",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
std = [
	"binary-merkle-tree/std",
	"codec/std",
	"environmental/std",
	"frame-metadata/std",
	"frame-support-procedural/std",
	"k256/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-debug-derive/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-metadata-ir/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-trie/std",
	"sp-weights/std",
]
try-runtime = [
	"sp-debug-derive/force-debug",
	"sp-runtime/try-runtime",
]
tuples-128 = ["frame-support-procedural/tuples-128"]
tuples-96 = ["frame-support-procedural/tuples-96"]
