[package]
authors.workspace = true
description = "FRAME System benchmarking"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-system-benchmarking"
readme = "README.md"
repository.workspace = true
version = "45.0.0"

# Vendored upstream FRAME crate.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
