[package]
authors.workspace = true
description = "Runtime API definition required by System RPC extensions."
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-system-rpc-runtime-api"
readme = "README.md"
repository.workspace = true
version = "40.0.0"

# Vendored upstream FRAME crate.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
docify.workspace = true
sp-api.workspace = true

[features]
default = ["std"]
std = ["codec/std", "sp-api/std"]
