[package]
authors.workspace = true
description = "Supporting types for try-runtime, testing and dry-running commands."
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "frame-try-runtime"
repository.workspace = true
version = "0.51.0"

# Vendored upstream FRAME crate.

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "sp-runtime/try-runtime"]
